--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "algoshimo.png"
   name             : "王英和"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : #"Short biography for the left-hand sidebar"
   location         : #"Earth"
   employer         : #"Red Brick University"
   uri              : # URL
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/algoshimo"
+  github           : "algoshimo"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
