--- a/_config.yml
+++ b/_config.yml
@@ -351,3 +351,8 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+nav:
+  - Home: /
+  - Blog: /blog/
+  - Archived: /archived/
